# artistic-intelligence-data

./: .gitignore  README.md  SConstruct  SConstruct.py  logger.py  main.py  pyproject.toml  repo_path.py  schedule.py  trains.py
.github/workflows/: python-app.yml
aid/: constants.py  influxdb_client.py  logger.py  main.py  scaling.py  schedule.py
aid/collect/: __init__.py  base_collector.py  ns_trains.py  scheduler.py
aid/collectors/: base.py  ns_trains.py
aid/provide/: api.py  base_provider.py  dependencies.py  influx_trains.py  ns_trains.py  response.py
aid/provide/routers/: datamon.py  trains.py
aid/query/: api.py
artistic_intelligence_data/: main.py  schedule.py
artistic_intelligence_data/collectors/: __init__.py  base.py  ns_trains.py
collectors/: __init__.py  base.py  ns_trains.py  trains.py
ddl/: _public.sql  ns_trains.sql
ddl/raw/: ns_trains.sql
ddl/std/: trains.sql
notebooks/: waterhoogtes.ipynb
scripts/: scaling.py  stations.py
scripts/buses/: ndov.py  ndov_analyze.py  ndov_gather.py
scripts/migrate/: backup_influx_data.py  influx_client.py
scripts/trains/: locations_app.py  stations.py
scripts/viz/: timeseries.py
scripts/water/: get_waterstanden_rijn_duitsland.py  prep_rws_data.py  rivierlijnen.py  waterstanden_rijn_duitsland.py
src/artistic_intelligence_data/: api.py  constants.py  dependencies.py  logger.py  models.py  scaling.py  utils.py
src/artistic_intelligence_data/routers/: datamon.py  trains.py
src/artistic_intelligence_data/trains/: material.py  questdb_train_provider.py
tests/: test_crs_transform.py  test_example.py  test_round_timestamp.py
