[tool.poetry]
name = "artistic-intelligence-data"
version = "0.1.0"
description = "Data collector, query API and more to create digital art."
homepage = "https://artisticintelligence.nl"
repository = "https://github.com/robinklaassen/artistic-intelligence-data"
authors = ["Robin Klaassen <info@robinklaassen.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "aid"}]

[tool.poetry.dependencies]
python = "^3.12"
APScheduler = "^3.10.4"
fastapi = "*"
gunicorn = "*"
pandas = "^2.2.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
structlog = "^24.1.0"
uvicorn = {extras = ["standard"], version = "*"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.8"
mypy = "^1.9.0"
pytest = "^8.1.1"
ruff = "^0.4.1"
scons = "^4.7.0"
types-requests = "^2.31.0.20240406"

[tool.poetry.group.script]
optional = true

[tool.poetry.group.script.dependencies]
jupyterlab = "*"
matplotlib = "*"
geopandas = "*"
ipympl = "*"
scipy = "*"
streamlit = "*"

[tool.poetry.scripts]
aid-collect = "aid.collect.scheduler:main"
artistic-intelligence-data = "aid.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
